kube-config/simple-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: service.clusterip.simple.app
spec:
  selector:
    name: deployment.simple.app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
