kube-config/simple-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-simple-app
  labels:
    app.kubernetes.io/name: ingress-simple-app
spec:
  ingressClassName: nginx
  rules:
    - host: antonmochalovt.ru
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: service-clusterip-simple-app
                port:
                  number: 80
